fixing styling on mobile devices

--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -82,7 +82,7 @@
         font-size: 1.3rem;
     }
     .white-space{
-        height: 0px;
+        display: none;
     }
 }
 
@@ -101,8 +101,10 @@
         height: 250px;
     }
     .button__portfolio-cta{
-        width: 250px;
-        font-size: 1.5rem;
+        margin-bottom: 0;
+        margin-top: 1rem;
+        padding: 1rem 0 1rem 0;
+        font-size: 1.3rem;
     }
 }
 
